# snapcast_admin.rs

./: Cargo.toml  README.md
src/: cli.rs  main.rs  snapcast.rs
