[package]
name = "snapcast_admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0.0"
time = { version = "0.3.31", features = ["local-offset", "parsing", "formatting", "macros", "serde"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
ureq = { version = "2.9.1", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
terminal_size = "0.3.0"
unicode-display-width = "0.3.0"
url = "2.5.0"
